# postgres_to_polars

./: Cargo.toml  README.md
src/: lib.rs
src/models/: client.rs  client_options.rs  column_result.rs  mod.rs  params.rs  pool.rs  pool_options.rs
src/utils/: error.rs  mod.rs  text_array.rs
tests/: query.rs
