[package]
name = "postgres_to_polars"
description = "A Rust library for direct and performant conversion of PostgreSQL data to Polars dataframes."
version = "0.1.0"
edition = "2024"
authors = ["Christophe Sonneville <christophe@swappy.fr>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/krikristoophe/postgres_to_polars"

[[bin]]
name = "postgres_to_polars"
path = "bin/test.rs"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
bytes = "1.10.1"
fallible-iterator = "0.2.0"
futures = "0.3.31"
md5 = "0.7.0"
polars = "0.46"
postgres-protocol = "0.6.8"
slice = "0.0.4"
tokio = { version = "1.45.1", features = ["full", "net"] }
uuid = { version = "1.17.0", features = ["v4"] }
