[package]
name = "postgres_to_polars"
description = "A Rust library for direct and performant conversion of PostgreSQL data to Polars dataframes."
version = "0.3.0"
edition = "2024"
authors = ["Christophe Sonneville <christophe@swappy.fr>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/krikristoophe/postgres_to_polars"

[[bin]]
name = "postgres_to_polars"
path = "bin/test.rs"

[dependencies]
anyhow = "1.0.100"
bb8 = "0.9.0"
byteorder = "1.5.0"
bytes = "1.10.1"
fallible-iterator = "0.2.0"
futures = "0.3.31"
md5 = "0.8.0"
polars = "0.51.0"
postgres-protocol = "0.6.9"
slice = "0.0.4"
tokio = { version = "1.47.1", features = ["full", "net"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }

#[dev-dependencies]
#planus = "=1.1.1"
